// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageBackground /> should be set importantForAccessibility in <View> and <Image> 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  importantForAccessibility="no"
  style={
    Object {
      "height": 50,
      "width": 150,
    }
  }
>
  <Image
    importantForAccessibility="no"
    source={
      Object {
        "uri": "foo-bar.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 50,
          "width": 150,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<ImageBackground /> should render as <ImageBackground> when mocked 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": 50,
      "width": 150,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "foo-bar.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 50,
          "width": 150,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<ImageBackground /> should render as <RCTImageView> when not mocked 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": 50,
      "width": 150,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "foo-bar.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 50,
          "width": 150,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<ImageBackground /> should shallow render as <ForwardRef(ImageBackground)> when not mocked 1`] = `
<ImageBackground
  source={
    Object {
      "uri": "foo-bar.jpg",
    }
  }
  style={
    Object {
      "height": 50,
      "width": 150,
    }
  }
/>
`;

exports[`<ImageBackground /> should shallow render as <ImageBackground> when mocked 1`] = `
<ImageBackground
  source={
    Object {
      "uri": "foo-bar.jpg",
    }
  }
  style={
    Object {
      "height": 50,
      "width": 150,
    }
  }
/>
`;
